# Ahodgepodge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh  setup.sh  target
env/: Dockerfile
env/cmakes/: add_and_run_benchmark.cmake  add_and_run_code.cmake  add_and_run_test.cmake  get_all_targets.cmake
env/docker/: Dockerfile  build_env.sh  start_experiment.sh
projects/: CMakeLists.txt
projects/00_jarvis/deepseek_interaction/: function_call.py  hello_word_case.py
projects/00_jarvis/deepseek_interaction/common/: __init__.py  get_client.py  send_message.py
projects/00_jarvis/deepseek_interaction/functions/: __init__.py  function_call.py
projects/00_jarvis/functions/: __init__.py  function_call.py
projects/00_jarvis/home_assistance_integration/: __init__.py  common.py  device_control_base.py  get_voice_input.py  receive_msg_from_microphone.py
projects/00_jarvis/home_assistance_integration/configs/: homebridge.json  lamp.json
projects/00_jarvis/unit_tests/: hello_word_case.py  search_google.py  tell_me_weather.py
projects/01_simple_example/: CMakeLists.txt  main.cpp
projects/01_simple_example/test/: CMakeLists.txt  cpu_gemm_bench.cpp  cpu_gemm_test.cpp
projects/02_cuda_example/: CMakeLists.txt  gemm_test.cu
projects/04_llama_example/: CMakeLists.txt  test_llama.cpp
